# Modularity

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  build.bat  build.sh  buildandrun.sh  main
.github/workflows/: thing.yaml
Resources/: imgui.ini
Resources/Shaders/: frag.glsl  skybox_frag.glsl  skybox_vert.glsl  vert.glsl
Shaders/: frag.glsl  vert.glsl
include/Shaders/: Shader.h
include/Skybox/: Skybox.h
include/Textures/: Texture.h
include/Window/: Window.h
src/: main.cpp  main.d
src/Headers/Window/: Window.h
src/Shaders/Shader_Manager/: Shader.cpp
src/Skybox/: Skybox.cpp
src/Textures/: Texture.cpp
src/WinView/: Window.cpp  Window.d
